# SHA_Generator

./: .gitignore  CMakeLists.txt  README.md  build.bat  installer_script.iss
assets/: about.txt  about.txt.sha256
qml/: AboutDialog.qml  Main.qml
src/: ShaController.cpp  ShaController.h  ShaWorker.cpp  ShaWorker.h  main.cpp
